--- a/public/styles.css
+++ b/public/styles.css
@@ -14,10 +14,10 @@
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: space-evenly;
-	height: 70vh;
+	height: 75vh;
 	border: 1px solid #808080a3;
 	padding: 20px 10px;
-	margin: 70px 30px;
+	margin: 50px 30px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -28,9 +28,9 @@
 
 .input_label {
 	color: #a62e5a;
-	width: 95%;
 	font-size: 17px;
 	margin: 15px 0 5px 5px;
+	width: 300px;
 }
 
 .form_input {
@@ -39,8 +39,8 @@
 	border-radius: 10px;
 	padding: 10px;
 	outline: none;
-	width: 95%;
 	background-color: #d3d3d312;
+	width: 90%;
 }
 
 .login_button,
@@ -52,7 +52,7 @@
 	align-self: center;
 	padding: 10px 50px;
 	border-radius: 10px;
-	margin: 20px 0;
+	margin: 10px 0;
 }
 
 .switch {
